.provarCaches/00D5f000005vwGkEAI/objects/rstk__poshipstep__c.object
<CustomObject>
    <description>poshipstep__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poshipstep_poship__r.rstk__externalid__c + &apos;_&apos; +  rstk__poshipstep_stepid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poshipstep_stepid__c + &apos; (&apos; +   LEFT(rstk__poshipstep_desc__c, (77 -  LEN(rstk__poshipstep_stepid__c) )) + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__poshipstep_stepid__c + &apos; &apos; +  rstk__poshipstep_desc__c + &apos; &apos; +  rstk__poshipstep_poship__r.rstk__poship_shipmentid__c + &apos; &apos; +
rstk__poshipstep_provider__r.rstk__povend_vendno__c + &apos; &apos; +  rstk__poshipstep_carrier__r.rstk__sycarrier_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_actarrivaldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Destination Port ETA - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_actdepartdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loading Date - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_actporteta__c</fullName>
        <label>Transit Port ETA - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_actusportetd__c</fullName>
        <label>Origin Port ETD - Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_carrier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipName>sycarrierposhipsteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_lastseq__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Last Step for Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_needarrivaldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Destination Port ETA - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_needdepartdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loading Date - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_needporteta__c</fullName>
        <label>Transit Port ETA -  Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_needusportetd__c</fullName>
        <label>Origin Port ETD -  Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_planarrivaldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Destination Port ETA - Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_plandepartdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loading Date - Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_planporteta__c</fullName>
        <label>Transit Port ETA - Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_planusportetd__c</fullName>
        <label>Origin Port ETD - Current</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_poship__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment ID</label>
        <referenceTo>rstk__poship__c</referenceTo>
        <relationshipName>poshipsteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Provider</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipName>povendposhipsteps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Step Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_stepid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Step ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poshipstep_transtime__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transit Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inbound Shipment Step SupReq</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Inbound_Shipment_Step</fullName>
        <columns>NAME</columns>
        <columns>rstk__poshipstep_poship__c</columns>
        <columns>rstk__poshipstep_desc__c</columns>
        <columns>rstk__poshipstep_stepid__c</columns>
        <columns>rstk__poshipstep_seq__c</columns>
        <columns>rstk__poshipstep_actarrivaldate__c</columns>
        <columns>rstk__poshipstep_lastseq__c</columns>
        <columns>rstk__poshipstep_actdepartdate__c</columns>
        <columns>rstk__poshipstep_carrier__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Inbound Shipment Step</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inbound Shipment Step</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Fields_cannot_be_updated</fullName>
        <active>true</active>
        <description>Step ID cannot be changed.</description>
        <errorConditionFormula>OR( 
ISCHANGED(rstk__poshipstep_stepid__c)
)</errorConditionFormula>
        <errorMessage>Step ID cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>